-Basic I18N implementation -Style changes -WIP